--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+# JDBC properties
+spring.datasource.url=jdbc:mysql://${HOST}:${PORT}/${DB_NAME}?useSSL=false
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASSWORD}
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.open-in-view=true
+
+# Logging properties
+spring.main.banner-mode=off
+#logging.level.root=debug
+
+# Spring Security properties
+spring.security.user.name=admin
+spring.security.user.password=password
+
 
